@@ -1,10 +1,10 @@
 <HTML>
-<!--  $Id: gmt_arrrghh.html,v 1.29 2010-10-09 22:26:20 guru Exp $  -->
+<!--  $Id: gmt_arrrghh.html,v 1.30 2010-10-27 22:10:19 guru Exp $  -->
 <TITLE>GMT Incompatibilities Notes</title>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Incompatibilities Notes</CENTER></H2><P>
 <HR>
-<H3><CENTER>15-OCT-2010: GMT Version 4.5.4 Released</H3></CENTER>
+<H3><CENTER>1-NOV-2010: GMT Version 4.5.4 Released</H3></CENTER>
 4.5.4 scripts should be fully backward compatible with 4.5.3.  For a list of all the new
 capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
 page.
